<resources>
    <string name="app_name">TrainAppRemaster</string>

    <string name="title_hoy">Hoy</string>
    <string name="title_estadisticas">Estadisticas</string>
    <string name="title_planes">Planes</string>
    <string name="title_config">Configuracion</string>
    <string name="title_rutinas">Rutinas</string>
    <string name="title_perfil">Perfil</string>

    <string name="rutinadelDia">Rutina del dia:</string>
    <string name="faltaelementos">No existen [rut/est] crea una para iniciar</string>


    <string name="iniciar">Iniciar</string>
    <string name="pausar">Pausar</string>
    <string name="reanudar">Reanudar</string>
    <string name="detener">Detener</string>
    <string name="tiempo">Tiempo</string>
    <string name="distancia">Distancia</string>
    <string name="velocidad">Velocidad</string>


    <string name="estaticotiempo">Estatico Tiempo</string>
    <string name="estaticorepeticiones">Estatico Repeticion</string>
    <string name="dinamico">Dinamico</string>

    <string name="user_location_permission_explanation">Permisos</string>
    <string name="user_location_permission_not_granted">No hay permisos</string>
    <string name="access_token">pk.eyJ1IjoibG9yZW56b2NoaWFib3R0byIsImEiOiJjanBqY21pc2wwNWV6M3ZwaWcxbXU4aTRlIn0.Xg8nlWR3LxFHpite4wwTKA</string>


    <!-- Firestore Values-->
    <string name="FSrutinas">rutinas</string>


    <string name="d">D</string>
    <string name="l">L</string>
    <string name="m">M</string>
    <string name="j">J</string>
    <string name="v">V</string>
    <string name="s">S</string>
    <string name="selecDinamico">Seleccione el tipo de ejercicio</string>
    <string name="aceptar">ACEPTAR</string>
    <string name="cancelar">CANCELAR</string>
    <string name="repet">Repeticiones</string>
    <string name="series">Series</string>
    <string name="tiempoentre">Descanso entre series</string>


    <string-array name="arrayTest">
        <item>Tipo 1</item>
        <item>Tipo 2</item>
        <item>Tipo 3</item>
    </string-array>


    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="web_client_id">605968381472-9emdghh12un1mfdp4fkj9bdqq6jod18a.apps.googleusercontent.com</string>
    <string name="desconectar">Desconectar</string>
    <string name="titleApp">TrainApp</string>
    <string name="RutinaColection">Rutina</string>
    <string name="intent_message">IntentMessage</string>
    <string name="bundleEj">bundleEjercicios</string>
    <string name="bundleDia">bundleDia</string>
</resources>
