<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_planes"
        android:icon="@drawable/ic_date_range_black_24dp"
        android:title="@string/title_planes" />
    <item
        android:id="@+id/navigation_rutinas"
        android:icon="@drawable/ic_content_paste_black_24dp"
        android:title="@string/title_rutinas" />
    <item
        android:id="@+id/navigation_hoy"
        android:icon="@drawable/ic_play_arrow_black_24dp"
        android:title="@string/title_hoy" />
    <item
        android:id="@+id/navigation_estadisticas"
        android:icon="@drawable/ic_show_chart_black_24dp"
        android:title="@string/title_estadisticas" />
    <item
        android:id="@+id/navigation_configuracion"
        android:icon="@drawable/ic_account_circle_black_24dp"
        android:title="@string/title_perfil"/>


</menu>
