<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="20dp"
    android:paddingEnd="20dp"
    android:paddingTop="20dp">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/selecDinamico"
        android:textSize="16sp"
        android:paddingBottom="10dp"/>

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/repet"
            android:textAlignment="textEnd"/>

        <EditText
            android:id="@+id/editText"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:hint="00"
            android:textAlignment="center"/>

        <View
            android:id="@+id/divider7"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/series"
            android:textAlignment="textEnd"/>

        <EditText
            android:id="@+id/editText2"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:hint="00"
            android:textAlignment="center"/>
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp">


        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginEnd="25dp"
            android:paddingStart="15dp"
            android:paddingTop="15dp"
            android:paddingEnd="15dp"
            android:paddingBottom="15dp"
            android:text="@string/cancelar"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryLigth"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginStart="25dp"
            android:paddingStart="15dp"
            android:paddingTop="15dp"
            android:paddingEnd="15dp"
            android:paddingBottom="15dp"
            android:text="@string/aceptar"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryLigth"
            android:textSize="16sp" />

    </FrameLayout>
</LinearLayout>