<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="20dp"
    android:paddingEnd="20dp"
    android:paddingTop="20dp">


    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/selecDinamico"
        android:textSize="16sp"
        android:paddingBottom="10dp"/>

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp">


        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:text="@string/cancelar"
            android:textAlignment="center"
            android:textSize="16sp"
            android:layout_marginEnd="25dp"
            android:textColor="@color/colorPrimaryLigth"/>

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:text="@string/aceptar"
            android:textAlignment="center"
            android:textSize="16sp"
            android:layout_marginStart="25dp"
            android:textColor="@color/colorPrimaryLigth"/>

    </FrameLayout>
</LinearLayout>