<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="20dp"
    android:paddingEnd="20dp"
    android:paddingTop="20dp">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/selecDinamico"
        android:textSize="16sp"
        android:paddingBottom="10dp"/>

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tiempo"
            android:textAlignment="textEnd"/>

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=":" />

        <EditText
            android:id="@+id/editText3"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:hint="MM"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=":" />

        <EditText
            android:id="@+id/editText4"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="SS"
            android:inputType="number"
            android:maxEms="60"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/series"
            android:textAlignment="textEnd"
            android:layout_marginStart="15dp"/>

        <EditText
            android:id="@+id/editText2"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="00"
            android:inputType="number"
            android:textAlignment="center" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">



        <TextView
            android:id="@+id/textView24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tiempoentre"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_margin="3dp"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <EditText
                android:id="@+id/txtMDDialogEstaticoTiempo"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:hint="MM"
                android:ems="10"
                android:inputType="number"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_height="wrap_content"
                android:text=" : " />

            <EditText
                android:id="@+id/txtSDDialogEstaticoTiempo"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:ems="10"
                android:hint="SS"
                android:inputType="number"
                android:textAlignment="center" />

        </LinearLayout>
    </LinearLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp">


        <TextView
            android:id="@+id/btnCancelar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginEnd="25dp"
            android:paddingStart="15dp"
            android:paddingTop="15dp"
            android:paddingEnd="15dp"
            android:paddingBottom="15dp"
            android:text="@string/cancelar"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryLigth"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/btnAceptar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginStart="25dp"
            android:paddingStart="15dp"
            android:paddingTop="15dp"
            android:paddingEnd="15dp"
            android:paddingBottom="15dp"
            android:text="@string/aceptar"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryLigth"
            android:textSize="16sp" />

    </FrameLayout>
</LinearLayout>